# defaultCproject

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bench/: CMakeLists.txt  bench1.cpp
doc/: about.md
inc/: .#gl_api.h  about.md
src/: CMakeLists.txt  about.md  main.cpp
test/: CMakeLists.txt  test1.cpp
tests/: CMakeLists.txt  test1.cpp
